--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
 <html>
-    
+    <head>
+        <title>Hello there!</title>
+    </head>
+    <body>
+        <!-- Otsikot -->
+        <h1>Otsikko1</h1>
+        <h2>Otsikko2</h2>
+        <h3>Otsikko3</h3>
+        <h4>Otsikko4</h4>
+        <h5>Otsikko5</h5>
+        <h6>Otsikko6</h6>
+
+        <!-- Lauseet -->
+        <p>
+            Hello there
+        </p>
+        <p>
+            Hello there again
+        </p>
+    </body>
 </html>
