--- a/eduvantaa-master/eduvantaa-master/harjoitus2.html
+++ b/eduvantaa-master/eduvantaa-master/harjoitus2.html
@@ -9,13 +9,13 @@
         <script src="aivot.js"></script>
     </head>
     <body>
-        <button type="button" onclick="laatikkoFunktio(1)" class="muutosNappi">Muuta 1. laatikon sisältöä.</button>
-        <button type="button" onclick="laatikkoFunktio(2)" class="muutosNappi">Muuta 2. laatikon sisältöä.</button>
-        <button type="button" onclick="laatikkoFunktio(3)" class="muutosNappi">Muuta 3. laatikon sisältöä.</button>
+        <button type="button" onclick="laatikkoFunktio(1)" onclick="imageFunktio()" value="Change" class="muutosNappi">Muuta 1. laatikon sisältöä.</button>
+        <button type="button" onclick="laatikkoFunktio(2)" onclick="imageFunktio()" value="Change" class="muutosNappi">Muuta 2. laatikon sisältöä.</button>
+        <button type="button" onclick="laatikkoFunktio(3)" onclick="imageFunktio()" value="Change" class="muutosNappi">Muuta 3. laatikon sisältöä.</button>
 
         <button onclick="reloadFunktio()" class="muutosNappi" id="reload">Reload.</button>
         
-        <img src="smiley1.png" height="100px" width="100px">
+        <img id="image" src="smiley1.png" height="100px" width="100px">
         <div class="alusta1">
             <div class="alusta2" id="laatikko1">
                 <h1 class="originalOtsikko1">Hello World!</h1>
