--- a/eduvantaa-master/eduvantaa-master/harjoitus2.html
+++ b/eduvantaa-master/eduvantaa-master/harjoitus2.html
@@ -48,5 +48,9 @@
 
             </div>
         </div>
+        <div>                    
+            <button onclick="diagrammiFunktio()">Tee diagrammi</button><br>                    
+            <canvas id="myCanvas" width="700" height="500" style="border:0px solid black";></canvas>
+        </div>
     </body>
 </html>
