--- a/eduvantaa-master/eduvantaa-master/harjoitus2.html
+++ b/eduvantaa-master/eduvantaa-master/harjoitus2.html
@@ -6,6 +6,7 @@
             Tyylitiedostoharjoituksia
         </title>
         <link rel="stylesheet" type="text/css" href="tyyli2.css">
+        <script src="jquery-3.4.1.js"></script>
         <script src="aivot.js"></script>
     </head>
     <body>
@@ -16,6 +17,12 @@
         <button onclick="reloadFunktio()" class="muutosNappi" id="reload">Reload.</button>
         
         <img id="image" src="smiley1.png" height="100px" width="100px">
+        <br>
+        <br>
+        <button id="pl1" class="muutosNappi" type="button">Piilota ensimmäinen laatikko</button>
+        <button id="pl2" class="muutosNappi" type="button">Piilota toinen laatikko</button>
+        <button id="pl3" class="muutosNappi" type="button">Piilota kolmas laatikko</button>
+
         <div class="alusta1">
             <div class="alusta2" id="laatikko1">
                 <h1 class="originalOtsikko1">Hello World!</h1>
