--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,4 +7,9 @@
         <script src="jquery.js"></script>
         <script src="portfolio_aivot.js"></script>
     </head>
+    <body>
+        <h1>
+            Samuel Westén
+        </h1>
+    </body>
 </html>
