--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,14 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>swest</title>
+        <title>Samuel Westén</title>
         <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
         <script src="jquery.js"></script>
         <script src="portfolio_aivot.js"></script>
     </head>
     <body>
-        <h1>
-            Samuel Westén
-        </h1>
+        <div class="kuvaOtsikko">
+            <img src="kuva1.jpg" style="width: 100%;">
+            <h1>
+                Samuel Westén
+            </h1>
+            <p class="Portfolio">Portfolio</p>
+        </div>
     </body>
 </html>
