--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Samuel Westén</title>
-        <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
-        <script src="jquery.js"></script>
-        <script src="portfolio_aivot.js"></script>
-    </head>
-    <body>
-        <div class="kuvaOtsikko">
-            <img src="kuva1.jpg" style="width: 100%;">
-            <h1>
-                Samuel Westén
-            </h1>
-            <p class="Portfolio">Portfolio</p>
-        </div>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Samuel Westén</title>
+    <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
+    <script src="jquery.js"></script>
+    <script src="portfolio_aivot.js"></script>
+</head>
+
+<body>
+    <div class="kuvaOtsikko">
+        <h1>
+            Samuel Westén
+        </h1>
+        <p>Portfolio</p>
+    </div>
+<br>
+<br>
+    <div class="linkit">
+        <p class="Tyylitiedostot">
+            <a href="Tyylitiedostot.html">
+                CSS
+            </a>
+        </p>
+        <p class="JS">
+            <a href="JavaScript.html">
+                JavaScript
+            </a>
+        </p>
+        <p class="jQ">
+            <a href="jQuery.html">
+                jQuery
+            </a>
+        </p>
+        <p class="Node">
+            <a href="Node.html">
+                Node.js
+            </a>
+        </p>
+    </div>
+</body>
+
 </html>
