--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="kuvaOtsikko">
+    <div class="kuvaOtsikko" style="width: 100%;">
         <h1>
             Samuel Westén
         </h1>
