--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="kuvaOtsikko" style="width: 100%;">
+    <img class="kuva1" src="kuva1.jpg" width="100%">
+    <div class="Otsikko"> 
         <h1>
             Samuel Westén
         </h1>
@@ -18,27 +19,25 @@
     </div>
 <br>
 <br>
-    <div class="linkit">
-        <p class="Tyylitiedostot">
-            <a href="Tyylitiedostot.html">
-                CSS
-            </a>
-        </p>
-        <p class="JS">
-            <a href="JavaScript.html">
-                JavaScript
-            </a>
-        </p>
-        <p class="jQ">
-            <a href="jQuery.html">
-                jQuery
-            </a>
-        </p>
-        <p class="Node">
-            <a href="Node.html">
-                Node.js
-            </a>
-        </p>
+    <div class="linkit" style="width: 100%;">
+        <table width="100%">
+            <tbody>
+                <tr>
+                    <td align="center">
+                    <a href="Tyylitiedostot.html">CSS</a>
+                </td>
+                    <td align="center">
+                    <a href="JavaScript.html">JavaScript</a>
+                    </td>
+                    <td align="center">
+                    <a href="jQuery.html">jQuery</a>
+                    </td>
+                    <td align="center">
+                    <a href="Node.html">Node.js</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 
