--- a/Portfolio/Tyylitiedostot.html
+++ b/Portfolio/Tyylitiedostot.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
         <title>
             Samuel CSS
         </title>
