--- a/Portfolio/Tyylitiedostot.html
+++ b/Portfolio/Tyylitiedostot.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
-        <title>
-            Samuel CSS
-        </title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>CSS</title>
+    <link rel="stylesheet" href="CSS.css">
+    <script src="jquery.js"></script>
+    <script src="CSS.js"></script>
+</head>
+
+<body>
+
+    <h1>
+        <img src="star wars1.png" width="100%">
+    </h1>
+    <br><br><br><br><br><br>
+        <div class="listaus" width="100%">
+            <br><br><br><br>
+            <ol>
+                <li>build a death star</li>
+                <li>get it destroyed</li>
+                <li>build a second one</li>
+            </ol>
+        </div>
+</body>
+
 </html>
