--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,39 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Samuel Westén</title>
-    <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
+    <link rel="stylesheet" href="portfolio_tyyli.css">
     <script src="jquery.js"></script>
     <script src="portfolio_aivot.js"></script>
 </head>
 
 <body>
-    <img class="kuva1" src="kuva1.jpg" width="100%">
-    <div class="Otsikko"> 
+    <div class="Otsikko">
         <h1>
             Samuel Westén
         </h1>
         <p>Portfolio</p>
-    </div>
-<br>
-<br>
-    <div class="linkit" style="width: 100%;">
-        <table width="100%">
-            <tbody>
-                <tr>
-                    <td align="center">
+        <br>
+        <br>
+        <table width="100%" class="linkit">
+
+            <tr>
+                <td>
                     <a href="Tyylitiedostot.html">CSS</a>
                 </td>
-                    <td align="center">
+                <td>
                     <a href="JavaScript.html">JavaScript</a>
-                    </td>
-                    <td align="center">
+                </td>
+                <td>
                     <a href="jQuery.html">jQuery</a>
-                    </td>
-                    <td align="center">
+                </td>
+                <td>
                     <a href="Node.html">Node.js</a>
-                    </td>
-                </tr>
-            </tbody>
+                </td>
+            </tr>
+
         </table>
     </div>
 </body>
