--- a/Portfolio/jQuery.html
+++ b/Portfolio/jQuery.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="portfolio_tyyli.css">
+        <link rel="stylesheet" type="text/css" href="jq.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="jq.js"></script>
         <title>
             Samuel jQuery
         </title>
     </head>
     <body>
-        
+        <button>Obi-Wan want's to say:</button>
     </body>
+    <div class="boksi" width="100%"><p>Hello there!</p></div>
 </html>
